# HolographV26_Rust

./: README.md
server/: Cargo.toml  holodb.sql
server/config/: holograph.toml  holograph.toml.example
server/src/: boot_impl.rs  codec_impl.rs  config_impl.rs  db_impl.rs  lib.rs  main.rs  server_impl.rs  session_impl.rs  state_impl.rs
server/src/bots/: mod.rs  virtual_bot.rs
server/src/core/: config.rs  console.rs  core.rs  io.rs  mod.rs  state.rs
server/src/db/: db.rs
server/src/encoding/: jeax_encoding.rs  mod.rs
server/src/encryption/: mod.rs
server/src/games/: game.rs  game_lobby.rs  game_player.rs  mod.rs
server/src/managers/: catalogue_manager.rs  event_manager.rs  mod.rs  rank_manager.rs  recycler_manager.rs  room_manager.rs  sound_machine_manager.rs  staff_manager.rs  string_manager.rs  user_manager.rs
server/src/messenger/: mod.rs  virtual_buddy.rs  virtual_messenger.rs
server/src/socket_servers/: game_socket_server.rs  mod.rs  mus_socket_server.rs
server/src/virtuals/rooms/: mod.rs  virtual_room.rs
server/src/virtuals/rooms/items/: floor_item.rs  floor_item_manager.rs  mod.rs  wall_item.rs  wall_item_manager.rs
server/src/virtuals/rooms/pathfinder/: coord.rs  game_pathfinder.rs  mod.rs  pathfinder.rs  rotation.rs
server/src/virtuals/users/: mod.rs  virtual_room_user.rs  virtual_room_user_status_manager.rs  virtual_song_editor.rs  virtual_user.rs
