[package]
name = "holograph_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
